# cratua-media-forge

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
.hermes/plans/: 2026-05-26_170000-mediaforge-spec.md  2026-05-27_121500-cratua-media-forge-remaining.md  2026-05-27_124500-tauri-v2-migration.md  2026-05-28_081500-windows-diagnostic.md  2026-05-28_084500-quality-audit.md  2026-05-28_102000-polish.md  2026-05-28_120000-advanced-fixes.md  2026-05-28_120500-advanced-complete.md  2026-05-28_121500-tdd.md  2026-05-28_122000-tdd-local.md  2026-05-28_123000-tdd-coverage.md  2026-05-29_000000-gif-webm-fix.md  2026-05-30_200000-licensing-system.md  2026-05-30_203000-code-review.md  2026-05-30_210000-fix-plan.md  2026-05-30_213000-fix-plan-detailed.md
context/: RenderConverterFFMPEG_v.0.0.4_deinterlace.bat
crates/mediaforge-core/: Cargo.toml
crates/mediaforge-core/src/: config.rs  enums.rs  error.rs  ffmpeg.rs  i18n.rs  job.rs  lib.rs  preset.rs
crates/mediaforge-gui/: Cargo.toml  build.rs  resource.rc
crates/mediaforge-gui/src/: app.rs  i18n.rs  main.rs  theme.rs
crates/mediaforge-gui/src/views/: about.rs  advanced.rs  mod.rs  overwrite.rs  queue.rs  settings.rs  simple.rs
crates/mediaforge-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
crates/mediaforge-tauri/capabilities/: default.json
crates/mediaforge-tauri/src/: commands.rs  lib.rs  main.rs
crates/mediaforge-tauri/ui/: bundle.css  bundle.js  index.html  test.js
crates/mediaforge-tauri/ui/src/: main.js
crates/mediaforge-tauri/ui/src/styles/: input.css
docs/: TECHNICAL.md
docs/tutorials/: 01-setup.md  02-core-enums.md  03-core-error-config.md  04-core-job-preset.md  05-core-ffmpeg-build.md  06-core-ffmpeg-run.md  07-tauri-commands.md  08-frontend-html-css.md  09-frontend-state-ui.md  10-frontend-queue-events.md  11-build-release.md  12-testing-pitfalls.md
scripts/: build-linux.sh  build-windows.sh  bump.sh  check.sh  download-ffmpeg.sh  generate-cert.sh  release.sh  sign-windows.sh
