[workspace]
members = ["crates/mediaforge-core", "crates/mediaforge-tauri"]
resolver = "2"

[workspace.package]
version = "0.3.24"
edition = "2024"
authors = ["laucalixto"]
license = "MIT"
repository = "https://github.com/laucalixto/mediaforge"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
