[package]
name = "mediaforge-tauri"
version.workspace = true
edition.workspace = true

[lib]
name = "mediaforge_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mediaforge-core = { path = "../mediaforge-core" }
